# youtube-dl-music-library

./: .gitignore  README.md  setup.cfg  setup.py
youtube_dl_music_library/: __init__.py
