[metadata]
author = Eli Ribble
author_email = eliribble@gmail.com
description = A tool to download your entire YouTube Music library
long_description = file: README.md
long_description_content_type = text/markdown
name = youtube_dl_music_library
url = None
version = 0.1

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
  youtube-dl-music-library = youtube_dl_music_library:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

